--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,21 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
   shared_preferences: ^2.0.11
   flutter:
     sdk: flutter
-
+    
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_localizations:
     sdk: flutter
+    
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.2
+  cloud_firestore: ^5.6.6
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -96,4 +102,3 @@ fonts:
   - family: Cairo
     fonts:
       - asset: assets/fonts/Cairo-Regular.ttf
-
