--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_auth: ^5.5.2
   cloud_firestore: ^5.6.6
   intl: ^0.19.0
+  url_launcher: ^6.3.1
+  fl_chart: ^1.0.0
 
 dev_dependencies:
   flutter_test:
