--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,11 +42,13 @@ dependencies:
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.2
   cloud_firestore: ^5.6.6
-  intl: ^0.19.0
+  intl: ^0.20.2
   url_launcher: ^6.3.1
   fl_chart: ^1.0.0
 
+
 dev_dependencies:
+
   flutter_test:
     sdk: flutter
 
@@ -56,7 +58,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
 
+flutter_launcher_icons:
+  android: true
+  image_path: "assets/images/baby_carriage.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
