--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   intl: ^0.20.2
   url_launcher: ^6.3.1
   fl_chart: ^1.0.0
+  http: ^1.4.0
+  google_generative_ai: ^0.1.0
 
 
 dev_dependencies:
